--- a/services/core-api/catcode.yaml
+++ b/services/core-api/catcode.yaml
@@ -9,11 +9,13 @@ metadata:
   - python
   - api
   - backend
-spec:
-  type: service
-  lifecycle: development
   links:
   - title: Telemetry
     icon: grafana
     url: http://grafana.mw
+  - title: example
+    url: https://www.example.com
+spec:
+  type: service
+  lifecycle: development
 
