added initial reader from base url

--- a/plugins/catdocs/appconfig.yaml
+++ b/plugins/catdocs/appconfig.yaml
@@ -1,2 +1,3 @@
 core_api: 'http://127.0.0.1:8000'
 catdocs_build_annotation: catcode.io/catdocs-build
+catcode_url_annotation: catcode.io/github-url
