--- a/plugins/catdocs/appconfig.yaml
+++ b/plugins/catdocs/appconfig.yaml
@@ -1,3 +1,5 @@
 core_api: 'http://127.0.0.1:8000'
 catdocs_build_annotation: catcode.io/catdocs-build
+catdocs_path_annotation: catcode.io/catdocs-path
+catcode_repo_path_annotation: catcode.io/repo-path
 catcode_url_annotation: catcode.io/github-url
