--- a/plugins/catdocs/pyproject.toml
+++ b/plugins/catdocs/pyproject.toml
@@ -21,8 +21,10 @@ fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
 pydantic = "^2.6.3"
 httpx = "^0.27.0"
-extensions-configuration = "^0.1.2"
 extensions-opentelemetry = "^0.1.0"
+extensions-configuration = "^0.1.2"
+mkdocs-material = "^9.5.13"
+mkdocstrings = "^0.24.1"
 
 
 [build-system]
