--- a/plugins/catdocs/appconfig.yaml
+++ b/plugins/catdocs/appconfig.yaml
@@ -3,3 +3,4 @@ catdocs_build_annotation: catcode.io/catdocs-build
 catdocs_path_annotation: catcode.io/catdocs-path
 catcode_repo_path_annotation: catcode.io/repo-path
 catcode_url_annotation: catcode.io/github-url
+rabbitmq_url: 'amqp://guest:guest@localhost/'
