--- a/services/core-api/pyproject.toml
+++ b/services/core-api/pyproject.toml
@@ -24,10 +24,12 @@ pyyaml = "^6.0.1"
 fastapi = "^0.109.0"
 uvicorn = "^0.27.0"
 httpx = "^0.26.0"
-extensions-configuration = "0.1.2"
 gitpython = "^3.1.41"
 messaging-tools = "^0.1.0"
 apscheduler = "^3.10.4"
+extensions-rabbitmq = "^0.1.0"
+extensions-opentelemetry = "^0.1.0"
+extensions-configuration = "0.1.3"
 
 
 [build-system]
