--- a/services/core-api/pyproject.toml
+++ b/services/core-api/pyproject.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Matias Wallenius <MatiWall@live.dk>"]
 readme = "README.md"
-packages = [
-    {include  = "core_api"}
-]
+package-mode = false
 
 [[tool.poetry.source]]
 name = "private"
