--- a/plugins/catdocs/appconfig.yaml
+++ b/plugins/catdocs/appconfig.yaml
@@ -1,4 +1,4 @@
-core_api: 'http://127.0.0.1:8000'
+core_api: http://catcode.backend.core-api.mw
 catdocs_build_annotation: catcode.io/catdocs-build
 catdocs_path_annotation: catcode.io/catdocs-path
 catcode_repo_path_annotation: catcode.io/repo-path
