--- a/plugins/catdocs/pyproject.toml
+++ b/plugins/catdocs/pyproject.toml
@@ -26,6 +26,8 @@ extensions-configuration = "^0.1.2"
 mkdocs-material = "^9.5.13"
 mkdocstrings = "^0.24.1"
 event-tools = "0.1.2"
+extensions-rabbitmq = "^0.1.0"
+messaging-tools = "^0.1.0"
 
 
 [build-system]
