--- a/plugins/dependencies/pyproject.toml
+++ b/plugins/dependencies/pyproject.toml
@@ -4,23 +4,25 @@ version = "0.1.0"
 description = ""
 authors = ["Matias Wallenius <MatiWall@live.dk>"]
 readme = "README.md"
-
-[[tool.poetry.source]]
-name = "private"
-url = "http://pypi.mw"
-priority = "primary"
+package-mode = false
 
 
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
 
+[[tool.poetry.source]]
+name = "private"
+url = "http://pypi.mw"
+priority = "supplemental"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0.1"
-httpx = "^0.26.0"
-fastapi = "^0.109.2"
-uvicorn = "^0.27.1"
+fastapi = "^0.110.1"
+uvicorn = "^0.29.0"
+httpx = "^0.27.0"
+extensions-opentelemetry = "^0.1.0"
 
 
 [build-system]
