--- a/services/core-api/pyproject.toml
+++ b/services/core-api/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "catcode-backend-coreapi"
+name = "catcode.backend.coreapi"
 version = "0.1.0"
 description = ""
 authors = ["Matias Wallenius <MatiWall@live.dk>"]
