--- a/plugins/dependencies/pyproject.toml
+++ b/plugins/dependencies/pyproject.toml
@@ -13,7 +13,7 @@ priority = "primary"
 
 [[tool.poetry.source]]
 name = "private"
-url = "http://pypi.mw"
+url = "http://pypi.mw.local"
 priority = "supplemental"
 
 [tool.poetry.dependencies]
