--- a/services/core-api/pyproject.toml
+++ b/services/core-api/pyproject.toml
@@ -26,7 +26,7 @@ gitpython = "^3.1.41"
 messaging-tools = "^0.1.0"
 apscheduler = "^3.10.4"
 extensions-rabbitmq = "^0.1.0"
-extensions-opentelemetry = "^0.1.0"
+extensions-opentelemetry = "0.1.1"
 extensions-configuration = "0.1.3"
 
 
