installing git in docker image

--- a/plugins/catdocs/Dockerfile
+++ b/plugins/catdocs/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 
 COPY pyproject.toml poetry.lock /app/
 
+# Install Git
+RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+
 RUN poetry install --no-dev
 
 COPY . /app
