--- a/plugins/catdocs/appconfig.yaml
+++ b/plugins/catdocs/appconfig.yaml
@@ -1,5 +1,6 @@
 core_api: http://catcode.mw.local/api/core-api/v1
 catdocs_build_annotation: catcode.io/catdocs-build
+catdocs_build_docs_folder_annotation: catcode.io/catdocs-build-docs-folder
 catdocs_path_annotation: catcode.io/catdocs-path
 catcode_repo_path_annotation: catcode.io/repo-path
 catcode_url_annotation: catcode.io/github-url
