--- a/services/core-api/catcode.yaml
+++ b/services/core-api/catcode.yaml
@@ -1,6 +1,6 @@
 kind: Component
 metadata:
-  description: Backend for catcode.
+  description: Core backend for catcode. Holds cache of catalog entities and monitor git repos and emit event on changes.
   system: catcode
   application: backend
   deployableUnit: coreapi
@@ -12,10 +12,8 @@ metadata:
   links:
   - title: Telemetry
     icon: grafana
-    url: http://grafana.mw.local/
-  - title: example
-    url: https://www.example.com
+    url: http://grafana.mw.local/d/ddp9zh235c740b/overview?orgId=1&refresh=30s&var-service=catcode.backend.core-api&var-log_level=All&from=now-30m&to=now
 spec:
   type: service
-  lifecycle: development
+  lifecycle: Development
   owner: mw
